test/fail_compilation/json.d
/*
REQUIRED_ARGS: -Xq
TEST_OUTPUT:
---
Error: argument expected for switch '-Xq'
       run 'dmd -man' to open browser on manual
---
*/
